--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
-        <meta name="msapplication-TileColor" content="#2d89ef" />
-        <meta name="theme-color" content="#ffffff" />
-        <meta name="description" content="Simple and stylish GitHub profile analysis." />
-        <title>GitHub Analyzer</title>
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
-    </body>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#2d89ef" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta itemProp="name" content="GitHub Analyzer" />
+    <meta itemProp="image" content="https://githubanalyzer.onrender.com/og-image.png" />
+    <meta name="description" content="Simple and stylish GitHub profile analysis." />
+    <meta property="og:title" content="GitHub Analyzer" />
+    <meta property="og:description" content="Simple and stylish GitHub profile analysis." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://githubanalyzer.onrender.com" />
+    <meta property="og:site_name" content="GitHub Analyzer" />
+    <meta property="og:image" content="https://githubanalyzer.onrender.com/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:locale" content="en-GB" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://githubanalyzer.onrender.com" />
+    <meta name="twitter:site" content="@bradypp" />
+    <meta name="twitter:creator" content="@bradypp" />
+    <meta name="twitter:title" content="GitHub Analyzer" />
+    <meta name="twitter:description" content="Simple and stylish GitHub profile analysis." />
+    <meta name="twitter:image" content="https://githubanalyzer.onrender.com/og-image.png" />
+    <meta name="twitter:image:alt" content="GitHub Analyzer" />
+    <title>GitHub Analyzer</title>
+</head>
+
+<body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+</body>
+
 </html>
